# fitctl

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/fitctl-cli/: Cargo.toml  README.md
crates/fitctl-cli/src/: main.rs
crates/fitctl-cli/src/commands/: bundle.rs  bundle_config.rs  classify.rs  completion.rs  contract.rs  diff.rs  export.rs  inspect.rs  inspect_config.rs  lock_policy_pack.rs  mod.rs  recommend.rs  redact.rs  sign.rs  state.rs  state_support.rs  survey.rs  validate.rs  verify.rs
crates/fitctl-cli/tests/: integration_suite.rs
crates/fitctl-cli/tests/support/: cli.rs  e2e.rs
crates/fitctl-core/: Cargo.toml  README.md  build.rs
crates/fitctl-core/src/: error.rs  lib.rs
crates/fitctl-core/src/artifacts/: batch_classification_report_v1.rs  config_bundle_v1.rs  contract_v1.rs  decision_bundle_v1.rs  envelope_v1.rs  field_diagnostic_v1.rs  metadata_v1.rs  mod.rs  recommendation_report_v1.rs  record_v1.rs  schema_ids_v1.rs  semantic_hash_v1.rs  service_profile_v1.rs  state_v1.rs  survey_v1.rs  validation_report_v1.rs  validation_v1.rs
crates/fitctl-core/src/bundle/: mod.rs
crates/fitctl-core/src/classify/: mod.rs
crates/fitctl-core/src/config/: catalogue_v1.rs  cuda_environment_catalogue_v1.rs  mod.rs  resolve_v1.rs  schema_v1.rs
crates/fitctl-core/src/config_bundle/: mod.rs
crates/fitctl-core/src/contract/: contract_basis_v1.rs  derivation_v1.rs  mod.rs  payload_v1.rs
crates/fitctl-core/src/diff/: mod.rs  semantic_v1.rs
crates/fitctl-core/src/export/: mod.rs
crates/fitctl-core/tests/: integration_suite.rs
docs/: accelerators.md  (+4 more)
(+237 files in other folders)
