# Copyright 2026 fitctl contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fitctl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for host survey, contract derivation, and workload-fit validation"
readme = "../../README.md"
repository = "https://github.com/tznurmin/fitctl"
homepage = "https://github.com/tznurmin/fitctl"
keywords = ["host", "cli", "policy", "validation"]
categories = ["command-line-utilities"]

[dependencies]
fitctl-core = { path = "../fitctl-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "fitctl"
path = "src/main.rs"
