# Copyright 2026 fitctl contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fitctl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for surveying hosts, deriving contracts, and validating workload fit"
readme = "README.md"
repository = "https://github.com/tznurmin/fitctl"
homepage = "https://github.com/tznurmin/fitctl"
keywords = ["host", "survey", "policy", "validation"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
